<resources>
    <string name="app_name">Mongodb Project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tweet_text">tweet_text</string>
    <string name="profile_picture">profile_pic</string>
    <string name="created_at">created_at</string>


    <string name="exit_option">Exit</string>
    <string name="hiking_option">Hiking</string>
    <string name="cooking_option">Hiking</string>
    <string name="swimming_option">Swimming</string>
    <string name="reading_option">Reading</string>
    <string name="search_option">Advanced Search</string>
    <string name="map_option">Google Map</string>
    <string name="maps_activity">Map</string>
    <string name="user_screen_name_holder">user_screen_name</string>

</resources>
